# bdk

./: Cargo.toml
crates/silentpayments/: Cargo.toml
crates/silentpayments/src/: receive.rs
crates/wallet/src/wallet/: mod.rs  tx_builder.rs
example-crates/example_cli/src/: lib.rs
example-crates/example_rust_silentpayments/: Cargo.toml
example-crates/example_silent_payments/: Cargo.toml  justfile
example-crates/example_silent_payments/src/: main.rs
example-crates/example_silentpayments/: Cargo.toml
example-crates/example_silentpayments/src/: main.rs
