[package]
name = "example_rust_silentpayments"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[dependencies]
bdk_chain = { version = "0.21.1", path = "../../crates/chain", features = ["miniscript", "serde"] }
bdk_testenv = { version = "0.11.1", path = "../../crates/testenv" }

[lints]
workspace = true
