[package]
name = "example_silent_payments"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[dependencies]
bitcoin = "0.32.5"
rand = "0.9.0"
bdk_chain = { path = "../../crates/chain", features = ["serde", "miniscript"]}
secp256k1 = { path = "../../../silentpayments/rust-secp256k1-pr-721-add-sp-module" }
rust-bip352 = { path = "../../../silentpayments/rust-bip352" }
bdk_bitcoind_rpc = { path = "../../crates/bitcoind_rpc" }
example_cli = { path = "../example_cli" }
ctrlc = { version = "^2" }
corepc-client = { version = "0.5.0", features = ["client-sync"] }
serde_json = "1.0.140"
bip39 = "2.1.0"
bdk_coin_select = "0.3.0"
bdk_file_store = { path = "../../crates/file_store" }
bdk_electrum = { path = "../../crates/electrum" }
bdk_testenv = { path = "../../crates/testenv", default-features = false }

anyhow = "1"
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
