[package]
name = "example_silentpayments"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[dependencies]
bdk_silentpayments = { version = "0.1.0", path = "../../crates/silentpayments" }
bdk_testenv = { version = "0.11.1", path = "../../crates/testenv" }
miniscript = { version = "12.0.0", default-features = true }

[lints]
workspace = true
